--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 repository = "https://github.com/odanek/quad"
 
 [dependencies]
+quad_macros = { path = "macros", version = "0.0.1" }
 winit = "0.25.0"
 log = "0.4.14"
 image = "0.23.14"
