--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ repository = "https://github.com/odanek/quad"
 
 [dependencies]
 quad_macros = { path = "macros", version = "0.0.1" }
-uuid = { version = "0.8", features = ["v4"] }
+cgm = { path = "../cgm" }
 winit = "0.25.0"
 log = "0.4.14"
 image = "0.23.14"
-cgm = { path = "../cgm" }
+uuid = { version = "0.8", features = ["v4"] }
+downcast-rs = "1.2.0"
