--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.14"
 image = "0.23.14"
 uuid = { version = "0.8", features = ["v4"] }
 downcast-rs = "1.2.0"
+crossbeam-channel = "0.5.1"
+rand = "0.8.4"
