--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/odanek/quad"
 [dependencies]
 quad_macros = { path = "macros", version = "0.0.1" }
 cgm = { path = "../cgm" }
+anyhow = "1.0.49"
+thiserror = "1.0.30"
 winit = "0.25.0"
 log = "0.4.14"
 image = "0.23.14"
