--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,8 @@ image = "0.23.14"
 uuid = { version = "0.8", features = ["v4"] }
 downcast-rs = "1.2.0"
 crossbeam-channel = "0.5.1"
+futures-lite = "1.12.0"
+async-channel = "1.6.1"
+async-executor = "1.4.1"
+num_cpus = "1.13.0"
 rand = "0.8.4"
