--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ crossbeam-channel = "0.5.1"
 futures-lite = "1.12.0"
 async-channel = "1.6.1"
 async-executor = "1.4.1"
+parking_lot = "0.11.2"
 num_cpus = "1.13.0"
 rand = "0.8.4"
