--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ cgm = { path = "../cgm" }
 anyhow = "1.0.52"
 thiserror = "1.0.30"
 winit = "0.26.0"
+raw-window-handle = "0.4.2"
 log = "0.4.14"
 image = "0.23.14"
 uuid = { version = "0.8", features = ["v4"] }
