--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ parking_lot = "0.11.2"
 num_cpus = "1.13.0"
 rand = "0.8.4"
 wgpu = "0.12.0"
+naga = { version = "0.8.0", features = ["wgsl-in", "wgsl-out"] }
