--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ winit = "0.26.0"
 raw-window-handle = "0.4.2"
 log = "0.4.14"
 image = "0.23.14"
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
 downcast-rs = "1.2.0"
 crossbeam-channel = "0.5.1"
 futures-lite = "1.12.0"
