--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ num_cpus = "1.13.0"
 rand = "0.8.4"
 wgpu = "0.12.0"
 naga = { version = "0.8.0", features = ["wgsl-in", "wgsl-out"] }
+hex = "0.4.3"
