--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ rand = "0.8.4"
 wgpu = "0.12.0"
 naga = { version = "0.8.0", features = ["wgsl-in", "wgsl-out"] }
 hex = "0.4.3"
+bytemuck = "1.7.3"
+crevice = "0.8.0"   # TODO: Remove this dependency, implement manually?
