--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ naga = { version = "0.8.0", features = ["wgsl-in", "wgsl-out"] }
 hex = "0.4.3"
 bytemuck = "1.7.3"
 crevice = "0.8.0"   # TODO: Remove this dependency, implement manually?
+rectangle-pack = "0.4.2"
+guillotiere = "0.6.2"
