--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,5 @@ bytemuck = "1.7.3"
 crevice = "0.8.0"   # TODO: Remove this dependency, implement manually?
 rectangle-pack = "0.4.2"
 guillotiere = "0.6.2"
+bitflags = "1.3.2"
+bytemuck_derive = "1.0.1"
