--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ wgpu = "0.12.0"
 naga = { version = "0.8.0", features = ["wgsl-in", "wgsl-out"] }
 hex = "0.4.3"
 bytemuck = "1.7.3"
-crevice = "0.8.0"   # TODO: Remove this dependency, implement manually?
+crevice = "0.8.0" # TODO Replace with Encase?
 rectangle-pack = "0.4.2"
 guillotiere = "0.6.2"
 bitflags = "1.3.2"
