--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ rectangle-pack = "0.4.2"
 guillotiere = "0.6.2"
 bitflags = "1.3.2"
 bytemuck_derive = "1.0.1"
+ab_glyph = "0.2.15"
+glyph_brush_layout = "0.2.3"
+derive_deref = "1.1.1"
