--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,7 @@ parking_lot = "0.12.0"
 wgpu = "0.13.0"
 naga = { version = "0.9.0", features = ["wgsl-in"] }
 hex = "0.4.3"
-bytemuck = "1.9.1"
-bytemuck_derive = "1.1.0"
+bytemuck = { version = "1.9.1", features = ["derive"]  }
 crevice = "0.10.0" # TODO Replace with Encase?
 rectangle-pack = "0.4.2"
 guillotiere = "0.6.2"
