--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,28 +11,30 @@ repository = "https://github.com/odanek/quad"
 [dependencies]
 quad_macros = { path = "macros", version = "0.0.1" }
 cgm = { path = "../cgm" }
-anyhow = "1.0.58"
-thiserror = "1.0.30"
-winit = "0.26.1"
-raw-window-handle = "0.4.2"
-log = "0.4.14"
-image = "0.24.0"
+anyhow = "1.0.65"
+thiserror = "1.0.35"
+winit = "0.27.3"
+raw-window-handle = "0.5.0"
+log = "0.4.17"
+image = "0.24.3"
 downcast-rs = "1.2.0"
-crossbeam-channel = "0.5.1"
+crossbeam-channel = "0.5.6"
 futures-lite = "1.12.0"
-async-channel = "1.6.1"
+async-channel = "1.7.1"
 async-executor = "1.4.1"
-parking_lot = "0.12.0"
-wgpu = "0.13.0"
-naga = { version = "0.9.0", features = ["wgsl-in"] }
+parking_lot = "0.12.1"
+# wgpu = "0.13.1"
+wgpu = { git = "https://github.com/gfx-rs/wgpu" }
+# naga = { version = "0.9.0", features = ["wgsl-in"] }
+naga = { git = "https://github.com/gfx-rs/naga", features = ["wgsl-in"] }
 hex = "0.4.3"
-bytemuck = { version = "1.9.1", features = ["derive"]  }
-crevice = "0.11.0" # TODO Replace with Encase?
+bytemuck = { version = "1.12.1", features = ["derive"] }
+crevice = "0.11.0"
 rectangle-pack = "0.4.2"
 guillotiere = "0.6.2"
 bitflags = "1.3.2"
-ab_glyph = "0.2.15"
+ab_glyph = "0.2.17"
 glyph_brush_layout = "0.2.3"
 derive_deref = "1.1.1"
-rodio = { version = "0.15", default-features = false, features = ["vorbis"] }
+rodio = { version = "0.16.0", default-features = false, features = ["vorbis"] }
 taffy = "0.1.0"
