--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,8 @@ futures-lite = "1.12.0"
 async-channel = "1.7.1"
 async-executor = "1.4.1"
 parking_lot = "0.12.1"
-# wgpu = "0.13.1"
-wgpu = { git = "https://github.com/gfx-rs/wgpu" }
-# naga = { version = "0.9.0", features = ["wgsl-in"] }
-naga = { git = "https://github.com/gfx-rs/naga", features = ["wgsl-in"] }
+wgpu = "0.14.0"
+naga = { version = "0.10.0", features = ["wgsl-in"] }
 hex = "0.4.3"
 bytemuck = { version = "1.12.1", features = ["derive"] }
 crevice = "0.11.0"
