--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ ab_glyph = "0.2.10"
 glyph_brush_layout = "0.2.3"
 derive_deref = "1.1.1"
 rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }
-taffy = "0.2.2"
+taffy = { version = "0.3.6", default-features = false, features = ["std"] }
