--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ quad_macros = { path = "macros", version = "0.0.1" }
 cgm = { path = "../cgm" }
 anyhow = "1.0.75"
 thiserror = "1.0.49"
-winit = "0.28.7"
+winit = {version = "0.29.3", features = ["rwh_05"]}
 raw-window-handle = "0.5.0"
 log = "0.4.20"
 image = "0.24.7"
@@ -35,3 +35,4 @@ glyph_brush_layout = "0.2.3"
 derive_deref = "1.1.1"
 rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }
 taffy = { version = "0.3.15", default-features = false, features = ["std"] }
+smol_str = "0.2.0"
