--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ quad_macros = { path = "macros", version = "0.0.1" }
 cgm = { path = "../cgm" }
 anyhow = "1.0.75"
 thiserror = "1.0.50"
-winit = {version = "0.29.3", features = ["rwh_05"]}
-raw-window-handle = "0.5.0"
+winit = {version = "0.29.3"}
+raw-window-handle = "0.6.0"
 log = "0.4.20"
 image = "0.24.7"
 downcast-rs = "1.2.0"
@@ -23,8 +23,8 @@ futures-lite = "2.0.0"
 async-channel = "2.0.0"
 async-executor = "1.6.0"
 parking_lot = "0.12.1"
-wgpu = "0.18.0"
-naga = { version = "0.14.0", features = ["wgsl-in"] }
+wgpu = "0.19.0"
+naga = { version = "0.19.0", features = ["wgsl-in"] }
 hex = "0.4.3"
 bytemuck = { version = "1.14.0", features = ["derive"] }
 crevice = "0.14.0"
